<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:gravity="center"
    tools:context=".splash">

    <ImageView
        android:layout_marginTop="-80dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/ambulancia_logo"
        android:src="@drawable/logocontainer" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ambulancia_app"
        android:textSize="25sp"
        android:layout_marginTop="15dp"
        android:textStyle="bold"
        android:textColor="@color/blue_11"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/round_the_clock_emergency_calls_for"
        android:layout_marginTop="12dp"
        android:textColor="@color/blue_11"

        android:textSize="16sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/adults_and_children"
        android:textColor="@color/blue_11"

        android:layout_marginTop="3dp"
        android:textSize="16sp"/>


</LinearLayout>