<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="5dp"
    app:cardCornerRadius="10dp"
    android:layout_marginBottom="10dp"
    android:background="@color/gray_black"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@color/gray_black"
        android:paddingBottom="20dp"

        >

        <ImageView
            android:id="@+id/flag"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:contentDescription="@string/ambulance"
            android:src="@drawable/image" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_st_john_s"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:paddingLeft="5dp"
            android:id="@+id/name"
            android:textColor="@color/blue_11"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/location_guatemala_city"
            android:paddingLeft="5dp"
            android:textColor="@color/blue_11"
            android:id="@+id/location"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:paddingLeft="5dp"
            android:text="@string/fees_50"
            android:textColor="@color/blue_11"
            android:id="@+id/fees"
            />
    </LinearLayout>



</com.google.android.material.card.MaterialCardView>